syntax = "proto3";

package grpc.product;

option java_multiple_files = true;
option java_package = "grpc.product";
option java_outer_classname = "ExistsCustomerProduct";

message ExistsCustomerProductRequest {
  int64 customerId = 1;
  int64 productId = 2;
}

message ExistsCustomerProductResponse {
  bool exists = 1;
}

service ExistsCustomerProductService {
  rpc exists (ExistsCustomerProductRequest) returns (ExistsCustomerProductResponse);
}
